--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="C:\Users\Amit Kaushik\Pictures\Camera Roll\ashu.jpg" alt="its me" width="200" height="200">
+        <img src="ashu.jpg" alt="its me" width="200" height="200">
       </img>
       </td>
       <td>  <h1>
