--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MY PERSONAL SITE</title>
 </head>
 
-<body background-color="blue">
+<body bgcolor="gray">
   <table cellspacing="20">
     <tr>
       <td>
