--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           Gulshan Vashist</h1>
 
         <p>
-        <em> <strong>Founder and ceo</strong> of a <a href="D:\IMG-20210817-WA0001.jpg">Bing</a></em>
+        <em> <strong>Founder and ceo</strong> of a <a href="IMG-20210817-WA0001.jpg">Bing</a></em>
         </p>
         <p>
           I am an iOS and <a href="D:\Punjabi video\Backbone_Hardy_Sandhu_Full_HD.mp4">web developer</a>.I &hearts; <span style="
